--- a/public/index.html
+++ b/public/index.html
@@ -233,7 +233,7 @@
                     1) Drag colored pegs into one of the empty holes on the "guess row".  Then click the "check guess" button. <br>
                     2) Use the feedback to help you deduce the correct combination. <br><br>
                     <b>Feedback Pegs:</b>
-                            <p style="color: black">BLACK:</p> One of your pegs is the correct color, but not in the right place. <br>
+                            <p style="color: white">WHITE:</p> One of your pegs is the correct color, but not in the right place. <br>
                             <p style="color: red">RED:</p> One of your pegs is the right color, and in the right place! <br><br>
                     Try to get 4 RED PEGS!
                 </p>
